--- a/game/templates/projector.html
+++ b/game/templates/projector.html
@@ -139,8 +139,8 @@
     }
     
     .projector-waiting {
-        background: rgba(255, 255, 255, 0.95);
-        color: #333;
+        background-color: rgba(255, 255, 255, 0.95);
+        color: #333 !important;
         border-radius: 30px;
         padding: 80px;
         margin: 40px 0;
@@ -152,8 +152,8 @@
     }
     
     .projector-scores {
-        background: rgba(255, 255, 255, 0.95);
-        color: #333;
+        background-color: rgba(255, 255, 255, 0.95);
+        color: #333 !important;
         border-radius: 30px;
         padding: 60px;
         margin: 20px 0;
